Fix too wide quick snack picker

--- a/src/app/pages/order/order.component.scss
+++ b/src/app/pages/order/order.component.scss
@@ -9,6 +9,8 @@
   padding: 0;
   list-style: none;
   text-align: center;
+  max-width: 600px;
+  margin: 0 auto;
 }
 
 .quickpick li {
